--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "webpack",
+    "build": "webpack",
     "test": "jest --watchAll",
     "dev": "webpack --watch"
   },
